--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+# Thymeleaf
 spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
+
+# Datasource
+spring.datasource.url=jdbc:mysql:///blog?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123
+
+# JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
