新增页面原型

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.password=123
 # JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Elasticsearch
+spring.data.elasticsearch.cluster-nodes=localhost:9200
+spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
